Fix css issues that causes whitespace in places it shouldn't

--- a/src/components/area-chart/AreaChart.scss
+++ b/src/components/area-chart/AreaChart.scss
@@ -1,7 +1,6 @@
 .area-chart {
     width: 100%;
     height: 100%;
-    margin: 8px 8px 8px 8px;
 }
 
 .chart-data {
