--- a/src/components/bar-chart/BarChart.scss
+++ b/src/components/bar-chart/BarChart.scss
@@ -1,7 +1,6 @@
 .bar-chart {
     width: 100%;
     height: 100%;
-    margin: 8px 8px 8px 8px;
 }
 
 .chart-data {
