--- a/src/components/common.scss
+++ b/src/components/common.scss
@@ -1,5 +1,5 @@
 .chart-title {
-    margin: 8px 8px 8px 8px;
+    margin: 0px 8px 8px 8px;
     font-family: Arial, Helvetica, sans-serif;
     font-size: 24px;
 }
